improve case owner error correction

--- a/app/views/case-owner-change-page/improve-case-owner-change-page.html
+++ b/app/views/case-owner-change-page/improve-case-owner-change-page.html
@@ -17,77 +17,192 @@
     <div class="govuk-grid-column-full">
 
 
-        <form class="form" action="#" method="post" novalidate>
-<div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-6 opss-radios__divider--title">
+
+<form class="form" action="#" method="post" novalidate="">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="govuk-form-group">
+
+  <fieldset class="govuk-fieldset" aria-describedby="caseowner-hint">
+
+  <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+
+    <h1 class="govuk-fieldset__heading">
+      Change the case owner
+    </h1>
+
+  </legend>
+
+
+  <div id="caseowner-hint" class="govuk-hint">
+    The current case owner is Jo Bernhard.
+  </div>
+
+
+  <div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1 opss-radios__divider--title">
+
+
 
         <div class="govuk-radios__divider opss-width-100">Your team</div>
+
+
+
+
 
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="caseowner-2" name="caseowner" type="radio" value="val01" checked="">
           <label class="govuk-label govuk-radios__label" for="caseowner-2">
-            Jo Bernard
-          </label>
+        Jo Bernard
+      </label>
+
         </div>
+
+
+
+
+
+
 
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="caseowner-3" name="caseowner" type="radio" value="val02">
           <label class="govuk-label govuk-radios__label" for="caseowner-3">
-            Someone in your team
-          </label>
+        Someone in your team
+      </label>
+
         </div>
+
+
+
+
+
+
 
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="caseowner-4" name="caseowner" type="radio" value="val03">
           <label class="govuk-label govuk-radios__label" for="caseowner-4">
-            Southampton Council
-          </label>
+        Southampton Council
+      </label>
+
         </div>
 
+
+
+
+
         <div class="govuk-radios__divider opss-width-100">Other teams added to the case</div>
+
+
+
+
 
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="caseowner-6" name="caseowner" type="radio" value="val04">
           <label class="govuk-label govuk-radios__label" for="caseowner-6">
-            <abbr>OPSS</abbr> Enforcement
-          </label>
+        <abbr>OPSS</abbr> Enforcement
+      </label>
+
         </div>
+
+
+
+
+
+
 
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="caseowner-7" name="caseowner" type="radio" value="val05">
           <label class="govuk-label govuk-radios__label" for="caseowner-7">
-            <abbr>OPSS</abbr> Trading Standards Co-Ordination
-          </label>
+        <abbr>OPSS</abbr> Trading Standards Co-Ordination
+      </label>
+
         </div>
 
+
+
+
+
         <div class="govuk-radios__divider opss-width-100">Other</div>
+
+
+
+
 
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="caseowner-9" name="caseowner" type="radio" value="val06" aria-describedby="caseowner-9-item-hint">
           <label class="govuk-label govuk-radios__label" for="caseowner-9">
-            <abbr>OPSS</abbr> Incident management
-          </label>
+        <abbr>OPSS</abbr> Incident management
+      </label>
 
           <div id="caseowner-9-item-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16">
-          For reporting serious risks to OPSS.
-        </div>
+        For reporting serious risks to OPSS.
+      </div>
 
         </div>
+
+
+
+
+
+
 
         <div class="govuk-radios__item">
           <input class="govuk-radios__input" id="caseowner-10" name="caseowner" type="radio" value="val07">
           <label class="govuk-label govuk-radios__label" for="caseowner-10">
-            <abbr>OPSS</abbr> Trading Standards Co-Ordination
-          </label>
+        <abbr>OPSS</abbr> Trading Standards Co-Ordination
+      </label>
+
         </div>
+
+
+
 
   </div>
 
 
-{{ govukButton({
-  text: "Continue"
-}) }}
+</fieldset>
+
+
+</div>
+
+
+
+
+
+
+
+
+
+<button class="govuk-button" data-module="govuk-button">
+  Continue
+</button>
+
 
         </form>
+
 
 
     </div>
